Agregando lista de zonas y plazas por zonas
